# kkgepo

./: .gitignore  README.md  aliases.yaml  build.sh  k  kubealias.py  kubealiasrc  main.py  pyproject.toml  test_kubealias.py  yaml_fallback.py
.github/workflows/: build.yml
src/: yaml_fallback.py
src/kkgepo/: config.yaml  helpers.py  kubealias.py  main.py
tests/: test_kubealias.py
